# rust-web-app

./: .gitignore  Cargo.toml
features/auth/: Cargo.toml
features/auth/src/: config.rs  error.rs  jwt.rs  lib.rs  models.rs  password.rs  service.rs
features/auth/src/pwd_scheme/: error.rs  mod.rs  scheme_01_argon2id.rs
features/auth/src/repository/: error.rs  in_mem_user_repo.rs  mod.rs
services/webapp/: Cargo.toml
services/webapp/assets/css/: styles.css
services/webapp/src/: error.rs  main.rs  state.rs
services/webapp/src/features/: mod.rs
services/webapp/src/features/about/: mod.rs  pages.rs  routes.rs
services/webapp/src/features/auth/: mod.rs  routes.rs
services/webapp/src/features/auth/pages/: login.rs  register.rs  signin.rs
services/webapp/src/features/contact/: pages.rs  routes.rs
services/webapp/src/router/: mod.rs
services/webapp/templates/: about.html  contact.html  index.html  layout.html
services/webapp/templates/auth/: layout.html  login.html  register.html  signin.html
