[workspace]
resolver = "2"
members = ["features/auth", "services/webapp"]

[workspace.lints.rust]
unused = { level = "allow", priority = -1 }

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Matt Wright <mjuni.dev@gmail.com>"]
description = "SaaS Web Template"

[workspace.dependencies]
askama = "0.12.1"
async-trait = "0.1.87"
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
time = "0.3.39"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
uuid = { version = "1.15.1", features = ["v4", "serde"] }

auth = { path = "features/auth" }
