[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
argon2 = "0.5.3"
async-trait.workspace = true
jsonwebtoken = "9.3.1"
rand = "0.9.0"
regex = "1.11.1"
serde.workspace = true
time = "0.3.39"
uuid.workspace = true
