[package]
name = "webapp"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
askama.workspace = true
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.6.2", features = ["fs"] }

auth.workspace = true
axum-extra = { version = "0.10.0", features = ["cookie"] }
